# moine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/moine/: Cargo.toml
crates/moine-cli/: Cargo.toml  README.md
crates/moine-cli/src/: archive.rs  args.rs  lib.rs  main.rs  tests.rs
crates/moine-cli/src/commands/: compare.rs  download.rs  mod.rs  unidic_artifact.rs  zh_artifact.rs
crates/moine-cli/tests/resources/unidic/: whisky-lex.csv
crates/moine-cli/tests/resources/unidic/license/: COPYING
crates/moine-core/: Cargo.toml  README.md
crates/moine-core/src/: dot.rs  lib.rs
crates/moine-ja/: Cargo.toml  README.md
crates/moine-ja/src/: distance.rs  kana.rs  lib.rs  overrides.rs  romaji.rs  sudachi.rs  unidic.rs
crates/moine-ja/tests/: overrides.rs
crates/moine-ja/tests/resources/: overrides.yaml
crates/moine-python/: Cargo.toml
crates/moine-python/src/: lib.rs
crates/moine-wasm/: Cargo.toml
crates/moine-wasm/src/: lib.rs
crates/moine-zh/: Cargo.toml  README.md
crates/moine-zh/src/: lib.rs  pinyin.rs
crates/moine/src/: lib.rs
demo/: README.md  index.html  main.js  style.css
docs/: development.md  dictionary_artifacts.md  release_process.md
docs/releases/: moine-cedict-20260520-v0.1.0.md  moine-cedict-20260520-v0.1.1.md  moine-sudachi-full-20260428-v0.2.0.md  unidic-cwj-202512-v0.1.0.md  unidic-cwj-202512-v0.1.1.md
python/moine/: __init__.py  __init__.pyi  __main__.py  _artifacts.py  _moine.pyi  _process.py  ja.py  zh.py
python/tests/: test_artifacts.py  test_ja.py  test_metadata.py  test_zh.py
scripts/: benchmark_distances.py  build-pages-site.sh  ci-smoke-artifact-archive.sh  release-cedict.sh  release-sudachi-full.sh  release-unidic-cwj.sh
website/: api.md  artifacts.md  cli.md  index.md  installation.md  rust.md  usage.md
website/stylesheets/: extra.css
