[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "moine"
version = "0.1.0"
description = "Lattice Path Edit Distance and romanization-aware string comparison"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT OR Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/tagucci/moine"
Documentation = "https://tagucci.github.io/moine/"
Repository = "https://github.com/tagucci/moine"
Issues = "https://github.com/tagucci/moine/issues"

[project.optional-dependencies]
test = ["pytest>=8,<9"]
dev = [
    "pytest>=8,<9",
    "ruff>=0.14,<0.15",
    "ty>=0.0.38,<0.1",
]
docs = ["zensical>=0.0.32"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["tmp"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
root = ["./python"]

[tool.ty.src]
include = ["python/moine"]

[tool.maturin]
manifest-path = "crates/moine-python/Cargo.toml"
module-name = "moine._moine"
python-source = "python"
features = ["extension-module"]
