[package]
name = "moine-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/moine-cli"
keywords.workspace = true
categories.workspace = true
description = "Command line utilities for moine validation"
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[dependencies]
flate2 = "1"
moine-core = { version = "0.1.0", path = "../moine-core" }
moine-zh = { version = "0.1.0", path = "../moine-zh" }
moine-ja = { version = "0.1.0", path = "../moine-ja" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
ureq = "2"
zstd = "0.13"

[[bin]]
name = "moine"
path = "src/main.rs"
doc = false
