[package]
name = "moine-ja"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/moine-ja"
keywords.workspace = true
categories.workspace = true
description = "Japanese kana and romaji lattice adapter for moine"
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[dependencies]
csv = "1.3"
fst = "0.4"
memmap2 = "0.9"
moine-core = { version = "0.2.0", path = "../moine-core" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"

[lib]
name = "moine_ja"
path = "src/lib.rs"
