[package]
name = "moine-python"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://tagucci.github.io/moine/"
keywords.workspace = true
categories.workspace = true
description = "Python extension module for moine"
publish = false
include = ["Cargo.toml", "src/**/*.rs"]

[lib]
name = "_moine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
moine-core = { version = "0.2.0", path = "../moine-core" }
moine-ja = { version = "0.2.0", path = "../moine-ja" }
moine-zh = { version = "0.2.0", path = "../moine-zh" }
pyo3 = "0.28.3"
serde_yaml = "0.9"

[features]
default = []
extension-module = ["pyo3/extension-module"]
