[package]
name = "moine-zh"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/moine-zh"
keywords.workspace = true
categories.workspace = true
description = "Chinese pinyin adapters for moine"
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[dependencies]
fst = "0.4"
memmap2 = "0.9"
moine-core = { version = "0.1.0", path = "../moine-core" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
